BookPage: fix mobile padding-top (120px) so widget top isn't cropped behind fixed header

--- a/src/BookPage.css
+++ b/src/BookPage.css
@@ -10,7 +10,7 @@
 
 @media (max-width: 768px) {
   .book-page {
-    padding-top: 64px;
+    padding-top: 120px;
   }
 }
 
